# deimos

./: .gitignore  CHANGELOG.md  deimos.cabal  deimos.code-workspace  fourmolu.yaml  hie.yaml
app/: Main.hs
lib/: Deimos.hs  Event.hs  Graphic.hs  World.hs
lib/Deimos/: Component.hs  System.hs  Utils.hs
lib/Deimos/Component/: Position.hs  ScreenSize.hs  Tiles.hs  Timer.hs
lib/Deimos/System/: Event.hs  Graphic.hs  Gravity.hs
