cabal-version:       3.0

name:                deimos
version:             0.1.0.0
homepage:            https://github.com/lupusanay/deimos
license:             NONE
author:              Ilya Kopeshtianski
maintainer:          lupusanay@gmail.com
category:            Game
extra-source-files:
  CHANGELOG.md
  fourmolu.yaml
data-dir:
  res

library
  exposed-modules:
    Deimos
  other-modules:
    Deimos.Component
    Deimos.System
    Deimos.System.Event
    Deimos.System.Graphic
    Deimos.Utils
  default-extensions:
    DeriveGeneric
    FlexibleInstances
    MultiParamTypeClasses
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies
    FlexibleContexts
    OverloadedStrings
    TypeApplications
  build-depends:
    base ^>=4.14.0.0,
    text,
    aeson,
    generic-lens,
    lens,
    apecs,
    sdl2,
    sdl2-image,
    sdl2-ttf,
    sdl2-gfx,
    unordered-containers,
    linear,
    protolude,
    vector,
    filepath
  hs-source-dirs:      lib
  mixins:
    base hiding (Prelude),
    protolude (Protolude as Prelude)
  default-language:    Haskell2010
  ghc-options: -Wall

executable deimos
  main-is:             Main.hs
  default-extensions:
    OverloadedStrings
  build-depends:
    base ^>=4.14.0.0,
    deimos,
    text,
    aeson,
    generic-lens,
    lens,
    apecs,
    sdl2,
    sdl2-image,
    sdl2-ttf,
    unordered-containers,
    protolude,
    linear
  hs-source-dirs:      app
  mixins:
    base hiding (Prelude),
    protolude (Protolude as Prelude)
  default-language:    Haskell2010
  ghc-options: -Wall -Werror